# digger-mate-panel-monitor

./: .gitignore  Makefile  README.md
client/: Makefile  Makefile.am  Makefile.in  README.md  configure  configure.ac  connection.c  main.c  reader.h
client/src/: Makefile  connection.c  connection.h  logger.h  main.c  parser.c  parser.h
common/src/: Makefile  logger.h  mutex.c  mutex.h
server/: Makefile  connection.c  connection.h  digger-client  generator.c  generator.h  logger.h  main.c  main.h  reader.c  reader.h
server/exclude/: test.xml
server/scripts/: get-ip_address.sh  get-load.sh  get-temp.sh  get-uptime.sh
server/src/: Makefile  connection.c  connection.h  generator.c  generator.h  logger.h  main.c
